-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11
-
Component/s: core-svc
-
b10
In the attach framework implementation across all platforms there are a few spots that can be cleaned up / improved.
Those are the details:
src/hotspot/os/aix/attachListener_aix.cpp:
align chmod call with implementations on other platforms
align assertion in AixAttachListener::read_request with implementations on other platforms
remove AIX specific option 'AttachListenerTimeout'
fix some spelling issues, add additional debug logs
src/hotspot/os/bsd/attachListener_bsd.cpp:
fix handling of null values in ArgumentIterator::next
align assertion in BsdAttachListener::read_request with implementations on other platforms
fix some spelling issues, add additional debug logs
src/hotspot/os/linux/attachListener_linux.cpp:
fix handling of null values in ArgumentIterator::next
additional initialization of memory in LinuxAttachListener::init()
fix some formatting & spelling issues, add additional debug logs
src/hotspot/os/solaris/attachListener_solaris.cpp:
fix handling of null values in ArgumentIterator::next
fix some spelling issues, add additional debug logs
src/hotspot/os/windows/attachListener_windows.cpp:
replace occurance of strcpy with os::snprintf in Win32AttachOperation::set_pipe
add some additional debug logs
src/jdk.attach/aix/classes/sun/tools/attach/VirtualMachineImpl.java:
minor comment updates
src/jdk.attach/aix/native/libattach/VirtualMachineImpl.c
sort include statements
remove AIX specific socket read/write timeouts
remove unused function 'SendQuitCallback'
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
some comment updates
src/jdk.attach/linux/classes/sun/tools/attach/VirtualMachineImpl.java
minor comment/formatting updates
remove unused 'native void sendQuitToChildrenOf()'
src/jdk.attach/linux/native/libattach/VirtualMachineImpl.c:
sort include statements
removed native coding for unused 'native void sendQuitToChildrenOf()'
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
add shutdown call in JNICALL Java_sun_tools_attach_VirtualMachineImpl_close
src/jdk.attach/macosx/classes/sun/tools/attach/VirtualMachineImpl.java:
minor cosmetical cleanup
src/jdk.attach/macosx/native/libattach/VirtualMachineImpl.c:
sort include statements
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
add shutdown call in JNICALL Java_sun_tools_attach_VirtualMachineImpl_close
src/jdk.attach/solaris/classes/sun/tools/attach/VirtualMachineImpl.java
minor comment update
src/jdk.attach/solaris/native/libattach/VirtualMachineImpl.c
sort include statements
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
src/jdk.attach/windows/native/libattach/VirtualMachineImpl.c
sort include statements
fix usage of JNU_ThrowIOExceptionWithLastError
Those are the details:
src/hotspot/os/aix/attachListener_aix.cpp:
align chmod call with implementations on other platforms
align assertion in AixAttachListener::read_request with implementations on other platforms
remove AIX specific option 'AttachListenerTimeout'
fix some spelling issues, add additional debug logs
src/hotspot/os/bsd/attachListener_bsd.cpp:
fix handling of null values in ArgumentIterator::next
align assertion in BsdAttachListener::read_request with implementations on other platforms
fix some spelling issues, add additional debug logs
src/hotspot/os/linux/attachListener_linux.cpp:
fix handling of null values in ArgumentIterator::next
additional initialization of memory in LinuxAttachListener::init()
fix some formatting & spelling issues, add additional debug logs
src/hotspot/os/solaris/attachListener_solaris.cpp:
fix handling of null values in ArgumentIterator::next
fix some spelling issues, add additional debug logs
src/hotspot/os/windows/attachListener_windows.cpp:
replace occurance of strcpy with os::snprintf in Win32AttachOperation::set_pipe
add some additional debug logs
src/jdk.attach/aix/classes/sun/tools/attach/VirtualMachineImpl.java:
minor comment updates
src/jdk.attach/aix/native/libattach/VirtualMachineImpl.c
sort include statements
remove AIX specific socket read/write timeouts
remove unused function 'SendQuitCallback'
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
some comment updates
src/jdk.attach/linux/classes/sun/tools/attach/VirtualMachineImpl.java
minor comment/formatting updates
remove unused 'native void sendQuitToChildrenOf()'
src/jdk.attach/linux/native/libattach/VirtualMachineImpl.c:
sort include statements
removed native coding for unused 'native void sendQuitToChildrenOf()'
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
add shutdown call in JNICALL Java_sun_tools_attach_VirtualMachineImpl_close
src/jdk.attach/macosx/classes/sun/tools/attach/VirtualMachineImpl.java:
minor cosmetical cleanup
src/jdk.attach/macosx/native/libattach/VirtualMachineImpl.c:
sort include statements
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
add shutdown call in JNICALL Java_sun_tools_attach_VirtualMachineImpl_close
src/jdk.attach/solaris/classes/sun/tools/attach/VirtualMachineImpl.java
minor comment update
src/jdk.attach/solaris/native/libattach/VirtualMachineImpl.c
sort include statements
additional memory initialization in Java_sun_tools_attach_VirtualMachineImpl_checkPermissions
replace occurances of jio_snprintf with native snprintf calls -> no need to include jvm.h any more
src/jdk.attach/windows/native/libattach/VirtualMachineImpl.c
sort include statements
fix usage of JNU_ThrowIOExceptionWithLastError