8201247: Various cleanups in the attach framework

Reviewed-by: goetz, cjplummer